# Plumb

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  LICENSE  README.md  WeightedInstFreq.cpp  build.sh  run.sh  test.c  test.ll  test.txt
.github/workflows/: pages.yml
benchmarks/: README.md  SUMMARY.md  analyze.py  fetch.sh  run_bench.sh
config/: weights.cfg
dashboard/: dashboard.html
docs/screenshots/: README.md
scripts/: _llvm_env.sh
src/: CMakeLists.txt  Plumb.cpp
testcases/: test_branchy.c  test_callchain.c  test_floatmm.c  test_memheavy.c  test_recursive.c
